<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSteelBlue"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/returnmain"
        android:textSize="@dimen/activity_vertical_margin" />

    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/eID"
        android:src="@drawable/eidtitle" />

    <Button
        android:id="@+id/btneIDAuth"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imgTitle"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_button"
        android:text="@string/eIDVerify"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imgDisplay"
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:layout_below="@+id/btneIDAuth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/eID"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvBeVerifyedData"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/imgDisplay"
        android:layout_below="@+id/btneIDAuth"
        android:gravity="center"
        android:hint="@string/eidlabel1"
        android:isScrollContainer="true"
        android:lines="1"
        android:minEms="10"
        android:scrollbars="none"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvVerifyedData"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/imgDisplay"
        android:layout_below="@+id/tvBeVerifyedData"
        android:gravity="center"
        android:hint="@string/eidlabel2"
        android:isScrollContainer="true"
        android:lines="1"
        android:minEms="10"
        android:scrollbars="none"
        android:textSize="24sp" />

    <ScrollView
        android:id="@+id/scveID"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_above="@+id/btnReturn"
        android:layout_below="@id/tvVerifyedData"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawVerticalTrack="true" >

        <TextView
            android:id="@+id/tveID"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/ProcessStatus" />

    </ScrollView>
    
    

</RelativeLayout>