<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSteelBlue"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tveCashShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/otp"
        android:textSize="@dimen/main_dimension" />

    <TextView
        android:id="@+id/tvChallengeCode"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/btnRecharge"
        android:layout_alignLeft="@+id/tveCashShow"
        android:layout_marginLeft="19dp"
        android:background="@color/White"
        android:gravity="center"
        android:isScrollContainer="true"
        android:lines="1"
        android:minEms="10"
        android:scrollbars="none"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/returnmain"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvResponseCode"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/tvVerifyedData"
        android:layout_alignLeft="@+id/tvChallengeCode"
        android:background="@color/White"
        android:gravity="center"
        android:isScrollContainer="true"
        android:lines="1"
        android:minEms="10"
        android:scrollbars="none"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnExpense"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/btnReturn"
        android:layout_alignRight="@+id/tveCashShow"
        android:layout_marginBottom="76dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/Login"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvVerifyedData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnExpense"
        android:layout_marginBottom="54dp"
        android:layout_toLeftOf="@+id/tvChallengeCode"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/DynamicOrder"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnRecharge"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/tvResponseCode"
        android:layout_marginBottom="25dp"
        android:layout_toLeftOf="@+id/tvChallengeCode"
        android:background="@drawable/rectangle_button"
        android:text="@string/GenerateChallenge"
        android:textSize="15sp" />

</RelativeLayout>