<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSteelBlue"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tveCashLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/ElectricMoney"
        android:textSize="32sp" />
    <Button
        android:id="@+id/btnRecharge"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/scveCash"
        android:layout_below="@id/tveCashLabel"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/Recharge"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/returnmain"
        android:textSize="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/btnExpense"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/btnRecharge"
        android:layout_below="@id/btnRecharge"
        android:layout_marginTop="18dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/Consume"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnBanlance"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/btnExpense"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/etRecharge"
        android:background="@drawable/rectangle_button"
        android:text="@string/BanlanceCash"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvBanlance"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/etExpense"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/btnBanlance"
        android:background="@color/White"
        android:gravity="center"
        android:isScrollContainer="true"
        android:lines="1"
        android:minEms="10"
        android:scrollbars="none"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etExpense"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@+id/btnExpense"
        android:layout_alignBottom="@+id/btnExpense"
        android:layout_alignLeft="@+id/etRecharge"
        android:layout_toRightOf="@id/btnExpense"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal" />

    <ScrollView
        android:id="@+id/scveCash"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@+id/tvBanlance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawVerticalTrack="true" >

        <TextView
            android:id="@+id/tveCash"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/ProcessStatus" />

    </ScrollView>

    

    <EditText
        android:id="@+id/etRecharge"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@id/btnRecharge"
        android:layout_alignBottom="@id/btnRecharge"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/btnRecharge"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

</RelativeLayout>